--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.11.10",
+    "prettier": "^2.8.0",
     "typescript": "^4.9.3"
   }
 }
